next item added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <ul>
         <li>Address</li>
         <li>Contact</li>
+        <li>Email</li>
+        <li>Phone number</li>
     </ul>
    </p>
 </body>
